--- a/BibliotecaUteco/BibliotecaUteco.Client/Pages/BooksPage.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Pages/BooksPage.razor
@@ -63,11 +63,16 @@
             </div>
             <SidebarSectionDivider Name="Libros"/>
             <div class="grid max-sm:grid-cols-2 max-md:grid-cols-3 grid-cols-6 gap-7">
-                <button  @onclick="ShowCreateBookForm" class="border-dotted border-[3px] border-green-600 aspect-[2/3] w-full rounded-xl hover:bg-green-100/30 transition-all flex flex-col justify-center items-center gap-2 cursor-pointer ">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide text-green-700 lucide-book-plus-icon lucide-book-plus"><path d="M12 7v6"/><path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"/><path d="M9 10h6"/></svg>
-                    <p class="text-xs text-green-700">Agregar Libro</p>
-                </button>
-                @foreach(var book in Books)
+                <AuthorizeView Roles="Admin">
+                    <Authorized>
+                        <button @onclick="ShowCreateBookForm" class="border-dotted border-[3px] border-green-600 aspect-[2/3] w-full rounded-xl hover:bg-green-100/30 transition-all flex flex-col justify-center items-center gap-2 cursor-pointer ">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide text-green-700 lucide-book-plus-icon lucide-book-plus"><path d="M12 7v6"/><path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"/><path d="M9 10h6"/></svg>
+                            <p class="text-xs text-green-700">Agregar Libro</p>
+                        </button>
+                    </Authorized>
+                </AuthorizeView>
+               
+                @foreach (var book in Books)
                 {
                     <BookCard Book="@book" Index="Books.IndexOf(book)"/>
                 }
@@ -75,7 +80,7 @@
                 {
                     <BookSkeleton Count="10"/>
                 }
-                
+
             </div>
             @if (_hasMore)
             {
