--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Common/BookCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Common/BookCard.razor
@@ -1,44 +1,54 @@
+
+
 <Animate Animation="Animations.FadeIn" Delay="TimeSpan.FromMilliseconds(Index * 300)" >
     <LumexCard Class="w-full aspect-[2/3] group hover:scale-105 transition-all cursor-pointer group">
-       
-        <LumexDropdown ShowArrow="true"  >
-            <LumexDropdownTrigger>
-                <LumexButton Size="Size.Small" IconOnly="true" Radius="Radius.Full" Class="absolute right-[10px] top-[10px] bg-green-700/70 backdrop-blur-xl invisible group-hover:visible text-white !p-1">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="!size-[16px] lucide lucide-ellipsis-icon lucide-ellipsis"><circle cx="12" cy="12" r="1"/><circle cx="19" cy="12" r="1"/><circle cx="5" cy="12" r="1"/></svg>
-                </LumexButton>
-            </LumexDropdownTrigger>
-            <LumexDropdownMenu  >
+       <AuthorizeView>
+           <Authorized>
+                 <LumexDropdown ShowArrow="true"  >
+                <LumexDropdownTrigger>
+                    <LumexButton Size="Size.Small" IconOnly="true" Radius="Radius.Full" Class="absolute right-[10px] top-[10px] bg-green-700/50 backdrop-blur-xl invisible group-hover:visible text-white !p-1">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="!size-[16px] lucide lucide-ellipsis-icon lucide-ellipsis"><circle cx="12" cy="12" r="1"/><circle cx="19" cy="12" r="1"/><circle cx="5" cy="12" r="1"/></svg>
+                    </LumexButton>
+                </LumexDropdownTrigger>
+                <LumexDropdownMenu  >
 
                
 
-               <LumexDropdownItem Id="EditarLibro" >
+                <LumexDropdownItem OnClick="SetBookToUpdate" Id="EditarLibro" >
                     <StartContent>
                         <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="!size-[18px] lucide lucide-book-image-icon lucide-book-image"><path d="m20 13.7-2.1-2.1a2 2 0 0 0-2.8 0L9.7 17"/><path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"/><circle cx="10" cy="8" r="2"/></svg>
                     </StartContent>
                     <ChildContent>Editar Libro</ChildContent>
                 </LumexDropdownItem>
-                <LumexDropdownItem Id="divider-1" Disabled="true">
-                    <SidebarSectionDivider Name="Para admins"/>
-
+                <LumexDropdownItem  Id="VerDetalles" >
+                    <StartContent>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="!size-[18px] lucide lucide-badge-info-icon lucide-badge-info"><path d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z"/><line x1="12" x2="12" y1="16" y2="12"/><line x1="12" x2="12.01" y1="8" y2="8"/></svg>                    </StartContent>
+                    <ChildContent>Ver detalles</ChildContent>
                 </LumexDropdownItem>
                 
-                <AuthorizeView Roles="Admin">
-                    <Authorized>
-                        <LumexDropdownItem Id="Divider2" Disabled="true">
-                            <SidebarSectionDivider Name="Zona de peligro"/>
+                @if (!string.IsNullOrEmpty(context.User?.FindFirst("role")?.Value) && context.User?.FindFirst("role")?.Value == "Admin")
+                {
 
-                        </LumexDropdownItem>
-                        <LumexDropdownItem Id="EliminarLibro" Color="@ThemeColor.Danger" Class="text-danger">
-                            <StartContent>
-                                <Trash2Icon Size="18" class="shrink-0" />
-                            </StartContent>
-                            <ChildContent>Eliminar libro</ChildContent>
-                        </LumexDropdownItem>
-                    </Authorized>
-                </AuthorizeView>
+                    <LumexDropdownItem Id="Divider2" Disabled="true">
+                        <SidebarSectionDivider Name="Zona de peligro"/>
+                    </LumexDropdownItem>
+                    <LumexDropdownItem Id="EliminarLibro" Color="@ThemeColor.Danger" Class="text-danger">
+                        <StartContent>
+                            <Trash2Icon Size="18" class="shrink-0"/>
+                        </StartContent>
+                        <ChildContent>Eliminar libro</ChildContent>
+                    </LumexDropdownItem>
+                }
+               
+
+                      
+
                
             </LumexDropdownMenu>
         </LumexDropdown>
+           </Authorized>
+       </AuthorizeView>
+      
       
         @if (string.IsNullOrEmpty(Book.CoverUrl))
         {
@@ -76,20 +86,16 @@
 
                 @if (Book.AvailableAmount >= 1)
                 {
-                    <p class="text-green-500 ">@Book.AvailableAmount disponibles</p>
+                    <p class="text-green-500 text-xs ">@Book.AvailableAmount disponibles</p>
                 }
                 else
                 {
 
-                    <p class="text-red-500 ">No disponibles</p>
+                    <p class="text-red-500 text-xs">No disponibles</p>
 
                 }
 
-                @if (!HideShowDetails)
-                {
-                    <span class=" text-xs hidden group-hover:block underline">Ver detalles</span>
-
-                }
+              
             </div>
 
         </LumexCardFooter>
@@ -99,11 +105,19 @@
 
 @code{
 
+ 
 
+   
     [Parameter] public BookResponse Book {get; set;} = new();
 
     [Parameter] public bool HideShowDetails {get; set;}
     
     [Parameter] public int Index {get; set;} = 1;
-    
+
+    public void SetBookToUpdate()
+    {
+        RightBarContext.SetBookToUpdate(Book);
+        RightBarContext.SetView(RightBarView.UpdateBook);
+    }
+
 }
