--- a/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
+++ b/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
@@ -589,6 +589,9 @@
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-\[20px\] {
     margin-top: 20px;
   }
@@ -1552,6 +1555,12 @@
   }
   .bg-foreground {
     background-color: var(--lumex-foreground);
+  }
+  .bg-green-700\/50 {
+    background-color: color-mix(in srgb, oklch(52.7% 0.154 150.069) 50%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-green-700) 50%, transparent);
+    }
   }
   .bg-green-700\/70 {
     background-color: color-mix(in srgb, oklch(52.7% 0.154 150.069) 70%, transparent);
